<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_fragment_1"
    tools:context=".fragment_tab_calc_ip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/texto_ip"
                        android:textAllCaps="false"
                        android:textColor="#040D5C"
                        android:textColorHighlight="#E91E63"
                        android:textColorLink="#E91E63"
                        android:textIsSelectable="false"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"
                        app:fontFamily="serif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_limpiar_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:foregroundGravity="left"
                        android:src="@android:drawable/ic_menu_delete"
                        android:tint="#040D5C" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_1"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/txt_ip11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/text_ip1"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="#040D5C"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#88E91E63"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_punto"
                    android:textColor="#040D5C" />

                <EditText
                    android:id="@+id/txt_ip21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/text_ip2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="#040D5C"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#88E91E63"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_punto"
                    android:textColor="#040D5C" />

                <EditText
                    android:id="@+id/txt_ip31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/text_ip3"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="#040D5C"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#88E91E63"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_punto"
                    android:textColor="#040D5C" />

                <EditText
                    android:id="@+id/txt_ip41"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/text_ip4"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="#040D5C"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#88E91E63"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_eslays"
                    android:textColor="#040D5C" />

                <EditText
                    android:id="@+id/txt_prefijo_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/text_prefijo"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="#040D5C"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#88E91E63"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/btn_C11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/efecto_boton"
                    android:gravity="center"
                    android:text="@string/btn_calcular"
                    android:textColor="@drawable/texto_boton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_resultado1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:text="@string/texto_vacio"
                        android:textAllCaps="false"
                        android:textColor="#47051C"
                        android:textColorHighlight="#E91E63"
                        android:textColorLink="#E91E63"
                        android:textIsSelectable="false"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        app:fontFamily="serif" />
                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>